--- a/.github/workflows/build-install-AMGX-ada.yml
+++ b/.github/workflows/build-install-AMGX-ada.yml
@@ -28,8 +28,7 @@ jobs:
       uses: actions/checkout@v3
       
     - name: get the AMGX submodule
-      run: |
-        git submodule update --init --recursive ${{ env.AMGX_PATH }}
+      run: git submodule update --init --recursive ${{ env.AMGX_PATH }}
 
     - name: load modules
       run: |
