--- a/.github/workflows/build-muelu-input-deck-ada.yml
+++ b/.github/workflows/build-muelu-input-deck-ada.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/build-muelu-input-deck.yml'
+      - '.github/workflows/build-install-trilinos-ada.yml'
       - 'external/trilinos/**'
       - 'src/muelu/**'
       - 'src/solver-market/**'
@@ -14,6 +15,7 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/build-muelu-input-deck.yml'
+      - '.github/workflows/build-install-trilinos-ada.yml'
       - 'external/trilinos/**'
       - 'src/muelu/**'
       - 'src/solver-market/**'
