--- a/.github/workflows/build-test-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-test-AMGX-input-deck-ada.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/build-test-AMGX-input-deck-ada.yml'
+      - '.github/workflows/build-install-AMGX-ada.yml'
       - 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
@@ -14,6 +15,7 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/build-test-AMGX-input-deck-ada.yml'
+      - '.github/workflows/build-install-AMGX-ada.yml'
       - 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
