--- a/.github/workflows/build-muelu-input-deck-ada.yml
+++ b/.github/workflows/build-muelu-input-deck-ada.yml
@@ -1,5 +1,5 @@
 name: build-muelu-input-deck-ada
- 
+
 on:
   push:
     branches: [ main ]
@@ -10,7 +10,6 @@ on:
       - 'src/muelu/**'
       - 'src/solver-market/**'
       - 'CMakeLists.txt'
-
   pull_request:
     branches: [ main ]
     paths:
@@ -20,46 +19,50 @@ on:
       - 'src/muelu/**'
       - 'src/solver-market/**'
       - 'CMakeLists.txt'
-
-
-  workflow_dispatch:  # allows manual triggering
-
-  workflow_run: #ensure that if muelu changes, the lib is built first
+  workflow_dispatch:
+  workflow_run:
     workflows: ["build-install-trilinos-ada"]
     types:
       - completed
 
+env:
+  PATH: muelu-input-deck
+  SOLVER_MARKET_CMAKE_OPTIONS: "-DBUILD_MUELU_INPUT_DECK=ON -DBUILD_AMGX_INPUT_DECK=OFF -DBUILD_UNIT_TESTS=OFF"
+  NICE_PRIORITY: 19
+  NPROCS: 48
+  MODULE_LIST: "cuda/12.8.0"
+
 jobs:
   prepare-muelu-input-deck:
     runs-on: [self-hosted, ada]
-
     steps:
     - name: clone and checkout
       uses: actions/checkout@v3
+
     - name: load modules
       run: |
         module purge
-        module load cuda/12.8.0
+        for mod in $MODULE_LIST; do
+          module load $mod
+        done
+
     - name: check triggering context
-      run: |
-        echo "Triggered by ${{ github.event_name }}"
+      run: echo "Triggered by ${{ github.event_name }}"
 
   configure-muelu-input-deck:
     runs-on: [self-hosted, ada]
     needs: prepare-muelu-input-deck
-    steps:  
-    - name: configure muelu-input-deck
+    steps:
+    - name: configure muelu input deck
       run: |
-        [ -d build-muelu-input-deck ] && rm -rf build-muelu-input-deck
-        mkdir build-muelu-input-deck && cd build-muelu-input-deck
-        cmake .. -DBUILD_MUELU_INPUT_DECK=OFF -DBUILD_AMGX_INPUT_DECK=ON -DBUILD_UNIT_TESTS=OFF
-        
+        [ -d build-$PATH ] && rm -rf build-$PATH
+        cmake -B build-$PATH -S . $SOLVER_MARKET_CMAKE_OPTIONS
+
   build-muelu-input-deck:
     runs-on: [self-hosted, ada]
     needs: configure-muelu-input-deck
-    steps:  
-    - name: build-muelu-input-deck
-      working-directory: ./build-muelu-input-deck
+    steps:
+    - name: build muelu input deck
+      working-directory: ./build-$PATH
       run: |
-        nice -n 19 make -j48
-    
+        nice -n $NICE_PRIORITY cmake --build . -- -j $NPROCS
