--- a/.github/workflows/build-install-trilinos-ada.yml
+++ b/.github/workflows/build-install-trilinos-ada.yml
@@ -1,4 +1,11 @@
 name: build-install-trilinos-ada
+
+env:
+  PATH: external/trilinos
+  CMAKE_OPTIONS: -D Kokkos_ARCH_ADA89=ON
+  NICE_PRIORITY: 19
+  NPROCS: 48
+  MODULE_LIST: "cuda/12.8.0"  
   
 on:
   push:
@@ -14,13 +21,6 @@ on:
       - '.github/workflows/build-install-trilinos-ada.yml'
   workflow_dispatch:  # allows manual triggering
 
-env:
-  TRILINOS_PATH: external/trilinos
-  TRILINOS_CMAKE_OPTIONS: -D Kokkos_ARCH_ADA89=ON
-  NICE_PRIORITY: 19
-  NPROCS: 48
-  MODULE_LIST: "cuda/12.8.0"  
-
 jobs:
   build-install-trilinos-ada:
     runs-on: [self-hosted, ada]
@@ -30,20 +30,20 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Initialize and update trilinos submodule
-      run: git submodule update --init --recursive ${{ env.TRILINOS_PATH }}
+      run: git submodule update --init --recursive ${{ env.PATH }}
         
     - name: load modules
       run: |
         module purge
         module load $MODULE_LIST
-        export WRAPPER_PATH="${{ github.workspace }}/${{ env.TRILINOS_PATH }}/packages/kokkos/bin/nvcc_wrapper"
+        export WRAPPER_PATH="${{ github.workspace }}/${{ env.PATH }}/packages/kokkos/bin/nvcc_wrapper"
         export OMPI_CXX=$WRAPPER_PATH
         export CXX=$WRAPPER_PATH
         echo "OMPI_CXX=$OMPI_CXX"
         echo "CXX=$CXX"
 
     - name: reset build and configure
-      working-directory: ${{ env.TRILINOS_PATH }}
+      working-directory: ${{ env.PATH }}
       run: |
         [ -d build ] && rm -rf build
         mkdir build
@@ -69,10 +69,10 @@ jobs:
         -D MueLu_ENABLE_TESTS:BOOL=ON \
         -D MueLu_ENABLE_EXAMPLES:BOOL=ON \
         -D MueLu_ENABLE_CUSPARSE=ON \
-        ${{ env.AMGX_CMAKE_OPTIONS }}
+        ${{ env.CMAKE_OPTIONS }}
         
     - name: build and install trilinos
-      working-directory: ${{ env.TRILINOS_PATH }}
+      working-directory: ${{ env.PATH }}
       run: |
         nice -n ${{ env.NICE_PRIORITY }} cmake --build build -- -j${{ env.NPROCS }}
         make install
