--- a/.github/workflows/build-muelu-input-deck-ada.yml
+++ b/.github/workflows/build-muelu-input-deck-ada.yml
@@ -1,5 +1,12 @@
 name: build-muelu-input-deck-ada
 
+env:
+  PATH: build-muelu-input-deck
+  CMAKE_OPTIONS: "-DBUILD_MUELU_INPUT_DECK=ON -DBUILD_AMGX_INPUT_DECK=OFF -DBUILD_UNIT_TESTS=OFF"
+  NICE_PRIORITY: 19
+  NPROCS: 48
+  MODULE_LIST: "cuda/12.8.0"
+
 on:
   push:
     branches: [ main ]
@@ -25,13 +32,6 @@ on:
     types:
       - completed
 
-env:
-  PATH: muelu-input-deck
-  SOLVER_MARKET_CMAKE_OPTIONS: "-DBUILD_MUELU_INPUT_DECK=ON -DBUILD_AMGX_INPUT_DECK=OFF -DBUILD_UNIT_TESTS=OFF"
-  NICE_PRIORITY: 19
-  NPROCS: 48
-  MODULE_LIST: "cuda/12.8.0"
-
 jobs:
   prepare-muelu-input-deck:
     runs-on: [self-hosted, ada]
@@ -40,11 +40,8 @@ jobs:
       uses: actions/checkout@v3
 
     - name: load modules
-      run: |
-        module purge
-        for mod in $MODULE_LIST; do
-          module load $mod
-        done
+      run: module load $MODULE_LIST
+
 
     - name: check triggering context
       run: echo "Triggered by ${{ github.event_name }}"
@@ -55,14 +52,14 @@ jobs:
     steps:
     - name: configure muelu input deck
       run: |
-        [ -d build-$PATH ] && rm -rf build-$PATH
-        cmake -B build-$PATH -S . $SOLVER_MARKET_CMAKE_OPTIONS
+        [ -d $PATH ] && rm -rf $PATH
+        cmake -B $PATH -S . $CMAKE_OPTIONS
 
   build-muelu-input-deck:
     runs-on: [self-hosted, ada]
     needs: configure-muelu-input-deck
     steps:
     - name: build muelu input deck
-      working-directory: ./build-$PATH
+      working-directory: ./$PATH
       run: |
         nice -n $NICE_PRIORITY cmake --build . -- -j $NPROCS
