--- a/.github/workflows/build-install-trilinos-ada.yml
+++ b/.github/workflows/build-install-trilinos-ada.yml
@@ -1,7 +1,7 @@
 name: build-install-trilinos-ada
 
 env:
-  PATH: external/trilinos
+  JOBPATH: external/trilinos
   CMAKE_OPTIONS: -D Kokkos_ARCH_ADA89=ON
   NICE_PRIORITY: 19
   NPROCS: 48
@@ -10,13 +10,13 @@ env:
 on:
   push:
     branches: [ main ]
-    paths:
+    JOBPATHs:
       - 'external/trilinos/**'
       - '.github/workflows/build-install-trilinos-ada.yml'
 
   pull_request:
     branches: [ main ]
-    paths:
+    JOBPATHs:
       - 'external/trilinos/**'
       - '.github/workflows/build-install-trilinos-ada.yml'
   workflow_dispatch:  # allows manual triggering
@@ -30,20 +30,20 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Initialize and update trilinos submodule
-      run: git submodule update --init --recursive ${{ env.PATH }}
+      run: git submodule update --init --recursive ${{ env.JOBPATH }}
         
     - name: load modules
       run: |
         module purge
         module load $MODULE_LIST
-        export WRAPPER_PATH="${{ github.workspace }}/${{ env.PATH }}/packages/kokkos/bin/nvcc_wrapper"
-        export OMPI_CXX=$WRAPPER_PATH
-        export CXX=$WRAPPER_PATH
+        export WRAPPER_JOBPATH="${{ github.workspace }}/${{ env.JOBPATH }}/packages/kokkos/bin/nvcc_wrapper"
+        export OMPI_CXX=$WRAPPER_JOBPATH
+        export CXX=$WRAPPER_JOBPATH
         echo "OMPI_CXX=$OMPI_CXX"
         echo "CXX=$CXX"
 
     - name: reset build and configure
-      working-directory: ${{ env.PATH }}
+      working-directory: ${{ env.JOBPATH }}
       run: |
         [ -d build ] && rm -rf build
         mkdir build
@@ -72,7 +72,7 @@ jobs:
         ${{ env.CMAKE_OPTIONS }}
         
     - name: build and install trilinos
-      working-directory: ${{ env.PATH }}
+      working-directory: ${{ env.JOBPATH }}
       run: |
         nice -n ${{ env.NICE_PRIORITY }} cmake --build build -- -j${{ env.NPROCS }}
         make install
