--- a/.github/workflows/build-muelu-input-deck-ada.yml
+++ b/.github/workflows/build-muelu-input-deck-ada.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: load modules
-      run: module load $MODULE_LIST
+        module load ${{ env.MODULE_LIST }}
 
 
     - name: check triggering context
