--- a/.github/workflows/build-test-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-test-AMGX-input-deck-ada.yml
@@ -12,8 +12,8 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/build-test-AMGX-input-deck-ada.yml'
-      - '.github/workflows/build-install-AMGX-ada.yml'
-      - 'external/AMGX/**'
+      #- '.github/workflows/build-install-AMGX-ada.yml'
+      #- 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
       - 'CMakeLists.txt'
@@ -22,8 +22,8 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/build-test-AMGX-input-deck-ada.yml'
-      - '.github/workflows/build-install-AMGX-ada.yml'
-      - 'external/AMGX/**'
+      #- '.github/workflows/build-install-AMGX-ada.yml'
+      #- 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
       - 'CMakeLists.txt'
@@ -31,7 +31,7 @@ on:
 
   workflow_dispatch:  # allows manual triggering
 
-  workflow_run: #ensure that if AMGX changes, the lib is built first
+  workflow_run: #if the build of AMGX is triggered, this job will be too
     workflows: ["build-install-AMGX-ada"]
     types:
       - completed
