--- a/.github/workflows/build-test-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-test-AMGX-input-deck-ada.yml
@@ -59,7 +59,7 @@ jobs:
         nice -n ${{ env.NICE_PRIORITY }}  make -j${{ env.NPROCS }}
 
     - name: run AMGX input deck test
-      working-directory: ${{ env.JOBPATH }
+      working-directory: ${{ env.JOBPATH }}
       run: |
         module purge
         module load ${{ env.MODULE_LIST }}
