--- a/.github/workflows/build-install-trilinos-ada.yml
+++ b/.github/workflows/build-install-trilinos-ada.yml
@@ -50,7 +50,7 @@ jobs:
         echo $CXX
 
         cmake -B build -S . \
-        -D CMAKE_INSTALL_PREFIX=../install \
+        -D CMAKE_INSTALL_PREFIX=install \
         -D CMAKE_BUILD_TYPE=RELEASE \
         -D BUILD_SHARED_LIBS:BOOL=ON \
         -D Trilinos_ENABLE_EXPLICIT_INSTANTIATION:BOOL=ON \
