reader accept comment under banner, fix rhs reader and add a converter to coordinate format

--- a/.github/workflows/build-test-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-test-AMGX-input-deck-ada.yml
@@ -63,4 +63,4 @@ jobs:
       run: |
         module purge
         module load ${{ env.MODULE_LIST }}
-        nice -n $NICE_PRIORITY ./input-decks/AMGX_input_deck --matrix=../matrices/aij_51840.mtx --config=../external/AMGX/src/configs/PCG_V.json
+        nice -n $NICE_PRIORITY ./input-decks/AMGX_input_deck --matrix=../matrices/aij_51840.mtx --rhs=../matrices/rhs_51840_coordinate.mtx --config=../external/AMGX/src/configs/PCG_V.json
